--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ project(":core") {
 
 
     dependencies {
+		implementation 'net.dermetfan.libgdx-utils:libgdx-utils:0.13.4'
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
