--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ project(":core") {
 
 
     dependencies {
+        implementation "com.google.code.gson:gson:2.8.6"
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
